hub/cluster/ingress-nginx/public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: ingress-nginx
  annotations:
    external-dns.alpha.kubernetes.io/target: ecf6ad56-c878-453d-8eb1-8ea0bff08da7.cfargotunnel.com
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-cloudflared
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: public-cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-cloudflared
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: public-cloudflared
              topologyKey: kubernetes.io/hostname
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.11.1
          args:
            - tunnel
            - --no-autoupdate
            - run
            - --url
            - http://cilium-gateway-public:80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: "2"
              memory: 1Gi
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
